Feature #57 add copyright and license related files, comments for OSS

--- a/force-app/main/default/classes/GGW_ApplicationCtrl.cls
+++ b/force-app/main/default/classes/GGW_ApplicationCtrl.cls
@@ -1,9 +1,11 @@
-/**
+/*
+ * Copyright (c) 2022, salesforce.com, inc.
+ * All rights reserved.
+ * SPDX-License-Identifier: BSD-3-Clause
+ * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
+ * 
  * GGW_ApplicationCtrl controller class support GGW.
  * 
- * 
- * @author Igor Androsov
- * @version 1.0
  */
 public without sharing class GGW_ApplicationCtrl {
 
