--- a/force-app/main/default/classes/GGW_SampleData.cls
+++ b/force-app/main/default/classes/GGW_SampleData.cls
@@ -7,24 +7,33 @@ public with sharing class GGW_SampleData {
         public Integer Sort_Order {get; set;}
         public Boolean Suggested {get; set;}
     }
-    public static void insertSections(){
-        List<GGW_Section> lst = readSectionData();
-        List<GGW_Section__c> sectionNewList = new List<GGW_Section__c>();
-        for(GGW_Section s : lst){
-            GGW_Section__c gs = new GGW_Section__c();
-            gs.Name = s.Name;
-            gs.Recommended__c = s.Recommended;
-            gs.Section_Details__c = s.Section_Details;
-            gs.Sort_Order__c = s.Sort_Order;
-            gs.Suggested__c = s.Suggested;
-            sectionNewList.add(gs);
-        }
-        if(sectionNewList.size() > 0){
-            //if(!isSectionExists()){            
-
+    /**
+     List<GGW_Section__c> lst = [SELECT Id, Name from GGW_Section__c];
+     delete lst;
+     */
+    @AuraEnabled
+    public static String insertSampleSections(){
+        system.debug('## enter insertSampleSections');
+        String str = 'Sample data';
+        if(!isSectionExists()){ 
+            List<GGW_Section> lst = readSectionData();
+            List<GGW_Section__c> sectionNewList = new List<GGW_Section__c>();
+            for(GGW_Section s : lst){
+                GGW_Section__c gs = new GGW_Section__c();
+                gs.Name = s.Name;
+                gs.Recommended__c = s.Recommended;
+                gs.Section_Details__c = s.Section_Details;
+                gs.Sort_Order__c = s.Sort_Order;
+                gs.Suggested__c = s.Suggested;
+                sectionNewList.add(gs);
+            }
+            if(sectionNewList.size() > 0){
                 insert sectionNewList;
-            //}
+                str += ' import complete.';
+                system.debug('## enter insertSampleSections: data inserted OK');
+            }
         }
+        return str;
     }
     // GGW_SampleData.insertSections();
     public static List<GGW_Section> readSectionData(){
@@ -36,6 +45,7 @@ public with sharing class GGW_SampleData {
         return sectionData;
     }
     // Check if any section records exists
+    @AuraEnabled(cacheable=true)
     public static Boolean isSectionExists(){
         List<GGW_Section__c> lst = [SELECT Id, Name FROM GGW_Section__c LIMIT 10];
         Boolean state = false;
